Attempt fixing task-complete btn scale on mobile

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -101,6 +101,7 @@ main.project-panel > .content {
 
     display: grid;
     grid-template-columns: 1rem 1fr 1.2rem;
+    justify-items: stretch;
 }
 
 .task-wrapper > .info-wrapper {
@@ -131,12 +132,13 @@ button.task-complete {
     appearance: none;
     outline: none;
     border: none;
-
+    width: auto;
     aspect-ratio: 1/1;
     border-radius: 50%;
     border: 2.4px solid var(--priority-brdr-clr);
     background-color: var(--priority-bg-clr);
 
+    padding: 0;
     position: relative;
 
     &::before {
@@ -144,8 +146,7 @@ button.task-complete {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+
         background: url(../images/tick.svg);
         background-position: center;
         background-size: contain;
